# python-template

./: .dockerignore  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  compose.sample.yaml  compose.yaml  devcontainer.json  devcontainer.sample.json  docker-compose.sample.yml  docker-compose.yml  init.sh  post-create.sh  postCreateCommand.sh  preCreateCommand.ps1  preCreateCommand.sh
.devcontainer/assets/: starship.toml
.devcontainer/local-feature/: devcontainer-feature.json  install.sh
.devcontainer/sample/: devcontainer.json
.prod/: Dockerfile  docker-compose.yml
project_name/: sample.py
src/package_name/: sample.py
tests/: test_sample.py
