[tool.poetry]
name = "package-name"
version = "0.1.0"
description = "A Python Project Template."
authors = ["lambda-chat <chat.algebrique@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"
pytest = "^8.2.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src", "tests"]
exclude = [".venv", "**/__pycache__"]
ignore = []
stubPath = ""
pythonVersion = "3.12"
executionEnvironments = []
# turn off rules if they are too strict
reportMissingImports = true
reportMissingTypeStubs = false
reportPropertyTypeMismatch = true
reportFunctionMemberAccess = true
reportImportCycles = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true
reportConstantRedefinition = true
reportDeprecated = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportUninitializedInstanceVariable = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportImplicitStringConcatenation = true
reportUnusedCallResult = "warning"
reportUnusedExpression = true
reportUnnecessaryTypeIgnoreComment = true
reportMatchNotExhaustive = true
reportShadowedImports = "warning"

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 120
target-version = "py312"
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/
select = [
    "B",   # flake8-bugbear
    "COM", # flake8-commas
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = ["COM812"]

[tool.ruff.format]
# https://docs.astral.sh/ruff/formatter/
exclude = []
