[tool.poetry]
# https://python-poetry.org/docs/pyproject/
name = "package-name"
version = "0.1.0"
description = "A Python Project Template."
authors = ["Your Name <your.name@example.com>"]
packages = [{ include = "package_name", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"
pytest = "^8.2.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src", "tests"]
exclude = [".venv", "**/__pycache__"]
ignore = []
stubPath = ""
pythonVersion = "3.12"
executionEnvironments = []
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
# Please turn off rules if they are too strict
reportMissingImports = true
reportMissingTypeStubs = false
reportPropertyTypeMismatch = true
reportFunctionMemberAccess = true
reportImportCycles = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true
reportConstantRedefinition = true
reportDeprecated = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportUninitializedInstanceVariable = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportImplicitStringConcatenation = true
reportUnusedCallResult = "warning"
reportUnusedExpression = true
reportUnnecessaryTypeIgnoreComment = true
reportMatchNotExhaustive = true
reportShadowedImports = "warning"

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 120
target-version = "py312"
include = ["src/**/*.py", "tests/**/*.py"]
extend-exclude = []

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/
# Please turn off rules if they are too strict
select = [
    "B",   # flake8-bugbear
    "COM", # flake8-commas
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = ["COM812"]
unfixable = ["SIM108"]

[tool.ruff.format]
# https://docs.astral.sh/ruff/formatter/
