# https://python-poetry.org/docs/pyproject/
[project]
name = "package-name"
description = "A Python Project Template."
dynamic = ["version"]
requires-python = ">=3.12"
authors = [{name ="Your Name", email="your.name@example.com"}]
dependencies = []
optional-dependencies = {}

[tool.poetry]
version = "0.1.0"
packages = [{ include = "package_name", from = "src" }]
exclude = []
include = []

[tool.poetry.group.dev.dependencies]
ruff = "^0.10.0"
pytest = "^8.3.5"

[tool.poetry.group.ci.dependencies]
microsoft-python-type-stubs = {git = "https://github.com/microsoft/python-type-stubs.git"}
pandas-stubs = "*"
scipy-stubs = "*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src", "tests"]
exclude = [".venv", "**/__pycache__"]
ignore = []
stubPath = ""
pythonVersion = "3.12"
typeCheckingMode = "standard"
executionEnvironments = []
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
# Please turn off rules if they are too strict
reportMissingImports = true
reportMissingTypeStubs = false
reportPropertyTypeMismatch = true
reportImportCycles = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true
reportConstantRedefinition = true
reportDeprecated = true
reportUninitializedInstanceVariable = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportImplicitStringConcatenation = true
reportUnusedCallResult = "warning"
reportUnusedExpression = true
reportUnnecessaryTypeIgnoreComment = true
reportMatchNotExhaustive = true
reportShadowedImports = "warning"

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 120
target-version = "py312"
include = ["src/**/*.py", "tests/**/*.py"]
extend-exclude = []

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/
# Please turn off rules if they are too strict
select = [
    "B",   # flake8-bugbear
    "COM", # flake8-commas
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = ["COM812", "SIM108"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# https://docs.astral.sh/ruff/formatter/
